--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,34 @@ body {
     font-family: 'Montserrat', sans-serif;
     /* margin: 0px; */
 }
+#overlay{
+    display: none;
+position: fixed;
+top: 0%;
+left: 0%;
+width: 100%;
+height: 100%;
+background-color: black;
+opacity: 1;
+z-index:1001;
+box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
 
+
+#overlay-content{ 
+text-align: center;
+position: absolute;
+font-weight: 600;
+font-size: medium;
+display: none;
+box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+width: 360px;
+height: 90px;
+padding: 16px;
+border: 16px solid #8080ff;
+background-color: white;
+z-index:1002;
+}
 hr {
     margin: 2rem 0;;
 }
